# hneural

./: LICENSE  classify.hs  hneural.cabal  makefile  patterns.hs  reservoir.hs
Data/Neural/: Classification.hs  Figures.hs  Lib.hs  Linear.hs  Math.hs  Net.hs  ParserSVM.hs  Patterns.hs  Perceptron.hs  Reservoir.hs  Signal.hs  Svg.hs  Topology.hs
images/: out.ogv
