name: hneural
version: 2009.12.1
license: BSD3
license-file: LICENSE
maintainer: Paolo Veronelli <paolo.veronelli@gmail.com> 
stability: unstable
category: AI
synopsis: A collection of tools for building neural nets. 
description:  Simple models for understanding neural networks
homepage: http://wiki.github.com/paolino/hneural
copyright: Copyright (c) 2009 Paolo Veronelli , Roberto Tazzoli
build-type: Simple
cabal-version: >=1.6

library
 exposed-modules:
       Data.Neural.Reservoir
 hs-source-dirs: .
 ghc-options: -Wall

 build-depends: base        >= 4 && < 5,
                containers  >= 0.1 && < 1,
                network     >= 2.1 && < 3,
                parallel    >= 1.0 && < 2,
                MonadRandom >= 0.1.4 && < 2,
                random      >= 1.0 && < 2,
                array       >= 0.2 && < 1
Executable reservoir
  Main-is:           reservoir.hs
  Build-Depends:     base >= 3 && < 5,
                     simpleargs >= 0.1 && <2,
                     binary >= 0.5.0.2 && <2,
                     bytestring >= 0.9.1.5 && <2
